# vectorless-rag

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/text_files/: YOUR_DOCUMENT.txt.example  sample_coffee_machine.txt
notebooks/: bm25_walkthrough.ipynb
